# templates_ocaml

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
exec/mwe/: DOCSTRING  dune
ffi/api/: DOCSTRING  MODULE.bazel.mustache
ffi/api/.config/: user.bazelrc
ffi/api/ffi/: BUILD.bazel.mustache
ffi/ctypes/: DOCSTRING
hello/basic/: .bazelrc  .gitignore  BUILD.bazel.mustache  DOCSTRING  MODULE.bazel.mustache  README.adoc.mustache
hello/basic/test/: BUILD.bazel.mustache  test.ml
hello/ctypes/: .bazelrc  DOCSTRING  MODULE.bazel.mustache  README.adoc.mustache
hello/ctypes/lib/: BUILD.bazel.mustache  date_functions.ml
hello/ffi/: DOCSTRING  MODULE.bazel.mustache
hello/ffi/lib/: BUILD.bazel.mustache  alpha.ml
hello/ppx_show/: .bazelrc  DOCSTRING  MODULE.bazel.mustache
lib/mwe/: DOCSTRING
menhir/mwe/: .bazelrc  DOCSTRING  MODULE.bazel.mustache  README.adoc.mustache
menhir/token/: DOCSTRING  MODULE.bazel.mustache  README.adoc.mustache
mwe/hello1/: .bazelrc  DOCSTRING  MODULE.bazel  README.adoc
mwe/hello2/: DOCSTRING
mwe/hellowdy/: DOCSTRING
pkg/mwe/: DOCSTRING
ppx/mwe/: BUILD.template  DOCSTRING
proj/ffi/: DOCSTRING
proj/hello/: .bazelrc  BUILD.mustache  DOCSTRING  MODULE.bazel  README.adoc
proj/mwe/: .bazelrc  .gitignore  DOCSTRING  README.adoc.mustache  dune-project.mustache  {{name}}.opam
proj/mwe/.config/: overrides.bazelrc.mustache
proj/mwe/lib/: dune.mustache  {{name}}.ml.mustache
proj/mwe/src/{{name}}/: BUILD.bazel.mustache  test.ml.mustache  {{name}}.ml.mustache
proj/mwe/test/: dune.mustache
test/mwe/: DOCSTRING  dune
(+28 files in other folders)
